--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,20 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Welcome from "../components/Welcome.astro";
+import Layout from "../layouts/Layout.astro";
 
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Greeting from "../components/Greeting";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
+<BaseLayout pageTitle="首页">
+	<Greeting client:load messages={["学习 Astro 很有趣！", "Astro is awesome!", "Astro 很棒！"]} />
+</BaseLayout>
+
+
+<!-- 
 <Layout>
 	<Welcome />
 </Layout>
+-->
