--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,7 @@ const { pageTitle } = Astro.props;
 const skillColor = "crimson";
 const fontWeight = "bold";
 const textCase = "uppercase";
+
 ---
 
 <html lang="zh-CN">
@@ -16,6 +17,8 @@ const textCase = "uppercase";
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" integrity="sha384-vZTG03O8rw+gXk7mKX5JjTMV5Yjv0p4b9p6kGk0V1f+6U5mI5DkLtS3qm9EkfZB+E" crossorigin="anonymous"> -->
     </head>
     <body>
         <Header />
