--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,17 +2,9 @@
 import Social from "./Social.astro";
 ---
 
-<style>
-  footer {
-    display: flex;
-    gap: 1rem;
-    margin-top: 2rem;
-  }
-</style>
-
-<footer>
-  <Social platform="github" username="zyssnh" Nickname="zyssnh-GitHub" />
-  <Social platform="github" username="withastro" Nickname="Astro-GitHub" />
-  <Social platform="twitter" username="astrodotbuild" Nickname="Astro-Twitter" />
-  <Social platform="youtube" username="astrodotbuild" Nickname="Astro-Youtube" />
+<footer class="flex justify-center gap-4 mt-8">
+  <Social platform="github" username="zyssnh" />
+  <Social platform="github" username="withastro" />
+  <Social platform="twitter" username="astrodotbuild" />
+  <Social platform="youtube" username="astrodotbuild" />
 </footer>
